# softserve-tasks

task1/: CMakeLists.txt  List.cpp  List.h  main.cpp  testRunner.cpp
task2/: AnyType.cpp  AnyType.h  CMakeLists.txt  main.cpp  testRunner.cpp
task3/: Directory.cpp  Directory.h  File_entry.cpp  File_entry.h  ThreadPool.cpp  ThreadPool.h  main_pool.cpp  string_funcs.cpp  testRunner.cpp
